# ESP-IDF

./: Makefile  README.md  sdkconfig  sdkconfig.old
components/gpio_driver/: CMakeLists.txt  gpio_cf_dv.c
components/gpio_driver/include/: gpio_cf_dv.h
main/: CMakeLists.txt  ESP32_main.c
main/BLE/: gatts_demo.c  gatts_demo.h
main/GPIO/: gpio_cf_dv.c
main/HTTP/: http_server.c  http_server.h
main/MQTT/: MQTT_task.c  MQTT_task.h
main/WIFI/: smartconfig_main.c  wifi_main.c
main/str_data/: str_data.c
